--- a/Resources/Prototypes/_HL/GameRules/events.yml
+++ b/Resources/Prototypes/_HL/GameRules/events.yml
@@ -1590,6 +1590,14 @@
       prob: 0.002
     - id: ReagentSlimeBuzzachloricbees
       prob: 0.002
+    - id: ReagentSlimeCum
+      prob: 0.005
+    - id: ReagentSlimePomelustine
+      prob: 0.005
+    - id: ReagentSlimePhilterex
+      prob: 0.005
+    - id: ReagentSlimeLibidozenithizine
+      prob: 0.004
     # - id: ReagentSlimeWehjuice
       # prob: 0.0003
     - id: ReagentCognizine
