i didnt want to push the turret yet

--- a/Resources/Prototypes/_EinsteinEngines/Entities/Mobs/Player/ipc.yml
+++ b/Resources/Prototypes/_EinsteinEngines/Entities/Mobs/Player/ipc.yml
@@ -88,13 +88,14 @@
   - type: BatteryDrinker
   - type: EncryptionKeyHolder
     keySlots: 4
-  - type: ContainerFill #AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-    containers:
-      key_slots:
-      - EncryptionKeyCommon
     examineWhileLocked: false
     keysExtractionMethod: Cutting
     keysUnlocked: false
+  - type: ContainerFill #Hardlight change
+    containers:
+      key_slots:
+      - EncryptionKeyCommon
+
   - type: ActiveRadio
   - type: IntrinsicRadioReceiver
   - type: IntrinsicRadioTransmitter
