--- a/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
@@ -60,7 +60,7 @@
   - type: Sprite
     layers:
     - state: crypt_blue
-    - state: nano_label
+    - state: colcomm_label
 
 - type: entity
   parent: [EncryptionKey, BaseC2ContrabandUnredeemable] # Frontier: BaseColcommCommandContraband<BaseC2ContrabandUnredeemable
@@ -275,4 +275,5 @@
     - type: Sprite
       layers:
         - state: crypt_rusted
-        - state: pirate_label
+        - state: pirate_labell
+
