--- a/Resources/Prototypes/_HL/Entities/Objects/Devices/encryption_keys.yml
+++ b/Resources/Prototypes/_HL/Entities/Objects/Devices/encryption_keys.yml
@@ -40,6 +40,6 @@
       defaultChannel: Nanotrasen
     - type: Sprite
       layers:
-        - state: crypt_gray
+        - state: crypt_blue
         - state: nano_label
 
