Rename weapon IDs in weapons.yml

--- a/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/weapons.yml
@@ -10,8 +10,8 @@
     Silver: 850
 
 - type: latheRecipe
-  id: WeaponRevolverArgenti
-  result: WeaponRevolverArgenti
+  id: NFWeaponRevolverArgenti
+  result: NFWeaponRevolverArgenti
   parent: BaseWeaponRecipeLong
   materials:
     Steel: 1500
