exped mob RR prevention

--- a/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
@@ -236,7 +236,7 @@
       groups:
         Brute: 12
   - type: Devourer
-    null
+    foodPreference: None
 
 - type: entity
   id: ActionSpawnRift
