--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/weaponryworks.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/weaponryworks.yml
@@ -74,7 +74,7 @@
     NFWeaponRevolverArgenti: 4294967295
     NFWeaponRevolverFitz: 4294967295
     WeaponSniperRepeater: 4294967295
-    #NFWeaponShotgunDoubleBarreled: 4294967295 replaced for weaponshotgundoublebarreled
+    # NFWeaponShotgunDoubleBarreled: 4294967295 replaced for weaponshotgundoublebarreled   Hard Light change
     WeaponBrassKnuckles: 4294967295
     WeaponRifleGestio: 4294967295
     WeaponRifleNovaliteC1: 4294967295
