--- a/Resources/Prototypes/_HL/Recipes/Lathes/weapons.yml
+++ b/Resources/Prototypes/_HL/Recipes/Lathes/weapons.yml
@@ -11,20 +11,24 @@
 #    Plastic: 800
 #    Wood: 100
 
-- type: latheRecipe
-  id: WeaponRifleGestio
-  result: WeaponRifleGestio
-  parent: BaseWeaponRecipeLong
-  materials:
-    Steel: 2500
-    Plasteel: 1200
-    Plastic: 1500
+#- type: latheRecipe
+# id: WeaponRifleGestio
+# result: WeaponRifleGestio
+# parent: BaseWeaponRecipeLong
+# materials:
+#   Steel: 2500
+#   Plasteel: 1200
+#   Plastic: 1500
+#
+#- type: latheRecipe
+#  id: WeaponRifleNovaliteC1
+#  result: WeaponRifleNovaliteC1
+#  parent: BaseWeaponRecipeLong
+#  materials:
+#    Steel: 2500
+#    Plasteel: 1200
+#    Plastic: 1500
+#
 
-- type: latheRecipe
-  id: WeaponRifleNovaliteC1
-  result: WeaponRifleNovaliteC1
-  parent: BaseWeaponRecipeLong
-  materials:
-    Steel: 2500
-    Plasteel: 1200
-    Plastic: 1500
+
+# WHY IS THIS FILE EVEN MADE IVY??
